[tool.poetry]
name = "youtube-tools"
version = "0.1.0"
description = ""
authors = ["axm <56112475+ax-sh@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "youtube_tools"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
